--- a/assets/scss/utils/_var.scss
+++ b/assets/scss/utils/_var.scss
@@ -4,6 +4,12 @@
     src: url(../fonts/Lucky_Beauty.ttf)
 }
 
+@font-face {
+    font-family: 'Cula',
+        sans-serif;
+    src: url(../fonts/cula.ttf)
+}
+
 $font-en: 'Inter',
 san-serif;
 $font-sub: 'Cula',
