--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@
   font-family: "Lucky Beauty", serif;
   src: url(../fonts/Lucky_Beauty.ttf);
 }
+@font-face {
+  font-family: "Cula", sans-serif;
+  src: url(../fonts/cula.ttf);
+}
 :root {
   --dark1: #2b2b2b;
   --color1: #E7E3E1;
@@ -161,6 +165,12 @@ body {
   transition: all ease 0.3s;
 }
 
+@media (max-width: 767px) {
+  br.none {
+    display: none;
+  }
+}
+
 .blind {
   position: absolute;
   width: 1px;
@@ -211,6 +221,12 @@ body {
   overflow-x: hidden !important;
   gap: 2rem;
 }
+@media (max-width: 767px) {
+  .footer {
+    padding: 48px 1rem;
+    min-height: 0;
+  }
+}
 .footer::after {
   background: radial-gradient(41.22% 50% at 100% 50.03%, #794825 0%, rgba(121, 72, 37, 0.75) 32.33%, rgba(121, 72, 37, 0) 100%);
   content: "";
@@ -234,6 +250,14 @@ body {
   max-width: 1070px;
   width: 100%;
   position: relative;
+}
+@media (max-width: 767px) {
+  .footer .footer-txt {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 .footer .footer-txt .left {
   -webkit-box-flex: 6;
@@ -339,6 +363,11 @@ body {
   border: 2px solid #e7e3e1 !important;
   color: #e7e3e1 !important;
 }
+@media (max-width: 767px) {
+  .header .gnb .link-more {
+    display: none;
+  }
+}
 .header .gnb .link-more::after {
   background: #E7E3E1 !important;
 }
@@ -376,6 +405,20 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+@media (max-width: 767px) {
+  .header .gnb .btn-side {
+    outline-offset: -1px;
+    color: #E7E3E1;
+    background-color: transparent;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 16px;
+    outline: unset;
+  }
+}
 .header .gnb .btn-side:hover {
   background: #e8e3e1;
   color: #573a31;
@@ -392,6 +435,11 @@ body {
   stroke-width: 2;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+}
+@media (max-width: 767px) {
+  .header .gnb .btn-side span {
+    display: none;
+  }
 }
 .header .gnb .logo {
   position: fixed;
@@ -420,6 +468,11 @@ body {
   overflow-y: auto;
   color: #573A31;
   z-index: 2;
+}
+@media (max-width: 767px) {
+  .header .gnb .side-nav {
+    padding: 120px calc(min(900px, 90%) / 100 * 15);
+  }
 }
 .header .gnb .side-nav.on {
   -webkit-transition: all ease 0.4s 0.4s;
@@ -481,6 +534,11 @@ body {
   font-family: "Lucky Beauty", serif;
   line-height: 1.2;
 }
+@media (max-width: 767px) {
+  .header .gnb .side-nav .list .item .title {
+    font-size: 36px;
+  }
+}
 .header .gnb .side-nav .list .item .title svg {
   width: 28px;
   height: 35px;
@@ -510,6 +568,11 @@ body {
   display: none;
   margin-top: 46px;
 }
+@media (max-width: 767px) {
+  .header .gnb .side-nav .list .sub {
+    margin-top: 32px;
+  }
+}
 .header .gnb .side-nav .list .sub li {
   padding-left: 46px;
   position: relative;
@@ -530,6 +593,7 @@ body {
 }
 .header .gnb .side-nav .list .sub li a {
   font-size: 18px;
+  font-family: "Cula", sans-serif;
 }
 .header .gnb .side-nav .close {
   background-color: unset;
@@ -571,6 +635,11 @@ body {
   line-height: 1;
   font-family: "Lucky Beauty", serif;
 }
+@media (max-width: 767px) {
+  .container .headline {
+    font-size: 58px;
+  }
+}
 .container .headline .brown-color {
   color: #BC9465;
   font-style: italic;
@@ -592,6 +661,11 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 0 1rem;
+}
+@media (max-width: 767px) {
+  .container > section {
+    min-height: auto;
+  }
 }
 .container .inner1 {
   padding: 0;
@@ -619,6 +693,11 @@ body {
   max-width: 100%;
   position: relative;
 }
+@media (max-width: 767px) {
+  .container .bottom-arrow {
+    margin-top: -200px;
+  }
+}
 .container .bottom-arrow img {
   width: 16px;
   height: 108px;
@@ -626,6 +705,12 @@ body {
 .container .inner2 {
   padding-top: 192px;
   margin-top: 88px;
+}
+@media (max-width: 767px) {
+  .container .inner2 {
+    padding-top: 146px;
+    margin-top: 48px;
+  }
 }
 .container .inner2 .inner {
   display: grid;
@@ -635,19 +720,42 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+@media (max-width: 767px) {
+  .container .inner2 .inner {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
 .container .inner2 .headline {
   grid-column: 1/7;
   grid-row: 1/2;
   z-index: 1;
 }
+@media (max-width: 767px) {
+  .container .inner2 .headline {
+    grid-column: span 4;
+    grid-row: span 1;
+  }
+}
 .container .inner2 .img-wrap {
   grid-column: 4/13;
   grid-row: 1/2;
+}
+@media (max-width: 767px) {
+  .container .inner2 .img-wrap {
+    grid-column: span 4;
+    grid-row: span 1;
+  }
 }
 .container .inner2 .img-wrap img {
   border-radius: 8px 0 0 8px;
   width: 1300px;
   height: 731px;
+}
+@media (max-width: 767px) {
+  .container .inner2 .img-wrap img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 .container .inner3 h2.headline {
   margin-top: 192px;
@@ -656,6 +764,14 @@ body {
       -ms-flex-align: start;
           align-items: start;
 }
+@media (max-width: 767px) {
+  .container .inner3 h2.headline {
+    position: relative;
+    margin-top: 96px;
+    text-align: left;
+    z-index: 10;
+  }
+}
 .container .inner3 .area-top {
   display: grid;
   grid-template-columns: repeat(12, minmax(0, 1fr));
@@ -663,6 +779,11 @@ body {
       -ms-flex-align: center;
           align-items: center;
   padding: 0 1rem;
+}
+@media (max-width: 767px) {
+  .container .inner3 .area-top {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
 }
 .container .inner3 .area-top .img-content {
   grid-row: span 1;
@@ -683,9 +804,20 @@ body {
   grid-template-columns: repeat(12, minmax(0, 1fr));
   padding: 0 1rem;
 }
+@media (max-width: 767px) {
+  .container .inner3 .area-middle {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
 .container .inner3 .area-middle .empty {
   grid-row: span 1;
   grid-column: span 3;
+}
+@media (max-width: 767px) {
+  .container .inner3 .area-middle .empty {
+    grid-column: span 4;
+    grid-row: span 1;
+  }
 }
 .container .inner3 .area-middle .img-content {
   grid-row: span 1;
@@ -695,15 +827,31 @@ body {
   z-index: 2;
   margin-bottom: 400px;
 }
+@media (max-width: 767px) {
+  .container .inner3 .area-middle .img-content {
+    margin-bottom: 48px;
+  }
+}
 .container .inner3 .area-middle .img-content img {
   width: 1300px;
   height: 975px;
+}
+@media (max-width: 767px) {
+  .container .inner3 .area-middle .img-content img {
+    width: 100%;
+    height: auto;
+  }
 }
 .container .inner3 .area-middle h3.headline {
   grid-row: span 1;
   grid-column: span 12;
   font-size: 144px;
   z-index: 2;
+}
+@media (max-width: 767px) {
+  .container .inner3 .area-middle h3.headline {
+    font-size: 58px;
+  }
 }
 .container .inner3 .area-bottom {
   display: grid;
@@ -712,6 +860,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media (max-width: 767px) {
+  .container .inner3 .area-bottom {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
 }
 .container .inner3 .area-bottom .empty {
   grid-row: span 1;
@@ -722,9 +875,22 @@ body {
   grid-column: span 5;
   font-size: 144px;
 }
+@media (max-width: 767px) {
+  .container .inner3 .area-bottom h3.headline {
+    font-size: 58px;
+  }
+}
 .container .inner3 .area-bottom .img-content {
   grid-row: span 1;
   grid-column: span 5;
+}
+@media (max-width: 767px) {
+  .container .inner3 .area-bottom .img-content {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    padding: 50px 0;
+  }
 }
 .container .inner-wrapper {
   position: relative;
@@ -749,6 +915,11 @@ body {
   max-width: 100vw;
   overflow: hidden;
 }
+@media (max-width: 767px) {
+  .container .inner-wrapper > * {
+    min-height: auto;
+  }
+}
 .container .inner-wrapper::after {
   background: radial-gradient(41.22% 50% at 100% 50.03%, #794825 0%, rgba(121, 72, 37, 0.75) 32.33%, rgba(121, 72, 37, 0) 100%);
   content: "";
@@ -760,10 +931,20 @@ body {
   position: relative;
   z-index: 1;
 }
+@media (max-width: 767px) {
+  .container .inner4 {
+    padding: 40px 0 0;
+  }
+}
 .container .inner4 .group-txt {
   display: grid;
   grid-template-columns: repeat(12, minmax(0, 1fr));
   padding: 0 1rem;
+}
+@media (max-width: 767px) {
+  .container .inner4 .group-txt {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
 }
 .container .inner4 .group-txt .txt-area {
   grid-row: span 1;
@@ -773,6 +954,11 @@ body {
   position: relative;
   margin-left: 100px;
   font-size: 64px;
+}
+@media (max-width: 767px) {
+  .container .inner4 .group-txt .headline {
+    font-size: 36px;
+  }
 }
 .container .inner4 .group-txt .link-more {
   margin-top: 40px;
@@ -796,6 +982,12 @@ body {
   margin-left: auto;
   margin-right: 0;
 }
+@media (max-width: 767px) {
+  .container .inner5 .inner {
+    margin-top: 0;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
 .container .inner5 .text-area {
   grid-row: span 1;
   grid-column: span 4;
@@ -807,6 +999,11 @@ body {
 .container .inner5 .headline {
   font-size: 64px;
 }
+@media (max-width: 767px) {
+  .container .inner5 .headline {
+    font-size: 36px;
+  }
+}
 .container .inner5 .swiper {
   display: grid;
   gap: 24px;
@@ -815,6 +1012,12 @@ body {
   grid-row: span 1;
   grid-column: span 8;
   padding-top: 80px;
+}
+@media (max-width: 767px) {
+  .container .inner5 .swiper {
+    padding-top: 40px;
+    margin-top: 32px;
+  }
 }
 .container .inner5 .swiper .navigation-buttons {
   position: absolute;
@@ -920,6 +1123,11 @@ body {
   position: relative;
   height: 600vh;
 }
+@media (max-width: 767px) {
+  .container .inner6 {
+    height: 100vh;
+  }
+}
 .container .inner6 .inner {
   position: sticky;
   top: 0;
@@ -927,6 +1135,12 @@ body {
   grid-template-columns: repeat(12, minmax(0, 1fr));
   padding: 192px 1rem;
   height: 100vh;
+}
+@media (max-width: 767px) {
+  .container .inner6 .inner {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    padding: 0 1rem;
+  }
 }
 .container .inner6 .title-area {
   grid-column: 1/8;
@@ -936,14 +1150,32 @@ body {
   font-size: 144px;
   line-height: 0.9;
 }
+@media (max-width: 767px) {
+  .container .inner6 .title-area .headline {
+    font-size: 58px;
+  }
+}
 .container .inner6 .txt-area {
   grid-column: 1/4;
   grid-row: span 1;
   margin-top: 16px;
 }
+@media (max-width: 767px) {
+  .container .inner6 .txt-area {
+    grid-column: 1/5;
+    position: relative;
+    z-index: 10;
+  }
+}
 .container .inner6 .txt-area > * {
   opacity: 0;
   visibility: hidden;
+}
+@media (max-width: 767px) {
+  .container .inner6 .txt-area > * {
+    opacity: 1;
+    visibility: visible;
+  }
 }
 .container .inner6 .txt-area .Top-text {
   line-height: 1.1;
@@ -978,6 +1210,14 @@ body {
   grid-column: 6/13;
   grid-row: 1/2;
 }
+@media (max-width: 767px) {
+  .container .inner6 .img-area {
+    position: relative;
+    grid-column: span 4;
+    grid-row: span 1;
+    width: 100%;
+  }
+}
 .container .inner6 .img-area .img-wrap {
   position: relative;
   margin: 0 0 1em;
@@ -994,6 +1234,13 @@ body {
           transform: scale(1.2);
   -webkit-transition: 0.4s;
   transition: 0.4s;
+}
+@media (max-width: 767px) {
+  .container .inner6 .img-area .img-wrap .content:last-child {
+    position: relative;
+    visibility: visible;
+    opacity: 1;
+  }
 }
 .container .inner6 .img-area .img-wrap .content.on {
   position: relative;
@@ -1013,6 +1260,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media (max-width: 767px) {
+  .container .inner6 .img-area .btn-wrap {
+    display: none;
+  }
 }
 .container .inner6 .img-area .btn-wrap button {
   -webkit-transform: translateX(0);
@@ -1052,12 +1304,29 @@ body {
   padding: 0 1rem;
   overflow: hidden;
 }
+@media (max-width: 767px) {
+  .container .inner7 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    padding: 192px 1rem 0;
+  }
+}
 .container .inner7 .title-wrap {
   grid-row: span 1;
   grid-column: span 10;
 }
+@media (max-width: 767px) {
+  .container .inner7 .title-wrap {
+    grid-column: span 4;
+    grid-row: span 1;
+  }
+}
 .container .inner7 .headline {
   font-size: 96px;
+}
+@media (max-width: 767px) {
+  .container .inner7 .headline {
+    font-size: 48px;
+  }
 }
 .container .inner7 .txt-area {
   grid-row: span 1;
@@ -1080,6 +1349,13 @@ body {
   grid-column: span 7;
   margin-left: auto;
 }
+@media (max-width: 767px) {
+  .container .inner7 .img-wrap {
+    grid-column: span 4;
+    grid-row: span 1;
+    margin-top: 50px;
+  }
+}
 .container .inner7 .img-wrap img {
   width: 100%;
 }
@@ -1090,6 +1366,11 @@ body {
   font-size: 96px;
   margin-left: 100px;
   margin-bottom: 40px;
+}
+@media (max-width: 767px) {
+  .container .inner8 .headline {
+    font-size: 48px;
+  }
 }
 .container .inner8 .swiper {
   padding: 80px 1rem 0;
@@ -1170,6 +1451,11 @@ body {
   transition: bottom 0.3s cubic-bezier(0.17, 0.04, 0.03, 0.94);
   background-color: #202020;
   border-top: 1px solid #fff;
+}
+@media (max-width: 1280px) {
+  .info-bar {
+    display: none;
+  }
 }
 .info-bar.on {
   display: none;
