--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -19,6 +19,10 @@
             border: 2px solid #e7e3e1 !important;
             color: #e7e3e1 !important;
 
+            @include m {
+                display: none;
+            }
+
             &::after {
                 background: #E7E3E1 !important;
             }
@@ -60,6 +64,16 @@
             gap: 0.5em;
             align-items: center;
 
+            @include m {
+                outline-offset: -1px;
+                color: #E7E3E1;
+                background-color: transparent;
+                align-items: center;
+                flex-wrap: wrap;
+                padding: 16px;
+                outline: unset;
+            }
+
             &:hover {
                 background: #e8e3e1;
                 color: #573a31;
@@ -76,6 +90,12 @@
                 fill: #e7e3e1;
                 stroke-width: 2;
                 transition: .5s;
+            }
+
+            span {
+                @include m {
+                    display: none;
+                }
             }
         }
 
@@ -104,6 +124,10 @@
             overflow-y: auto;
             color: #573A31;
             z-index: 2;
+
+            @include m {
+                padding: 120px calc(min(900px, 90%)/100*15);
+            }
 
             &.on {
                 transition: all ease .4s .4s;
@@ -161,6 +185,10 @@
                             serif;
                         line-height: 1.2;
 
+                        @include m {
+                            font-size: 36px;
+                        }
+
                         svg {
                             width: 28px;
                             height: 35px;
@@ -188,6 +216,10 @@
                     display: none;
                     margin-top: 46px;
 
+                    @include m {
+                        margin-top: 32px;
+                    }
+
                     li {
                         padding-left: 46px;
                         position: relative;
@@ -209,6 +241,8 @@
 
                         a {
                             font-size: 18px;
+                            font-family: 'Cula',
+                                sans-serif;
                         }
                     }
                 }
