--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -1,9 +1,14 @@
 .container {
+
     .headline {
         font-size: 7.5vw;
         line-height: 1;
         font-family: 'Lucky Beauty',
             serif;
+
+        @include m {
+            font-size: 58px;
+        }
 
         .brown-color {
             color: #BC9465;
@@ -19,6 +24,10 @@
         align-items: center;
         justify-content: center;
         padding: 0 1rem;
+
+        @include m {
+            min-height: auto;
+        }
     }
 
     .inner1 {
@@ -46,6 +55,10 @@
         max-width: 100%;
         position: relative;
 
+        @include m {
+            margin-top: -200px;
+        }
+
         img {
             width: 16px;
             height: 108px;
@@ -56,27 +69,51 @@
         padding-top: 192px;
         margin-top: 88px;
 
+        @include m {
+            padding-top: 146px;
+            margin-top: 48px;
+        }
+
         .inner {
             display: grid;
             grid-template-columns: repeat(12, minmax(0, 1fr));
             gap: 0.5em;
             align-items: center;
+
+            @include m {
+                grid-template-columns: repeat(4, minmax(0, 1fr));
+            }
         }
 
         .headline {
             grid-column: 1 / 7;
             grid-row: 1 / 2;
             z-index: 1;
+
+            @include m {
+                grid-column: span 4;
+                grid-row: span 1;
+            }
         }
 
         .img-wrap {
             grid-column: 4 / 13;
             grid-row: 1 / 2;
 
+            @include m {
+                grid-column: span 4;
+                grid-row: span 1;
+            }
+
             img {
                 border-radius: 8px 0 0 8px;
                 width: 1300px;
                 height: 731px;
+
+                @include m {
+                    max-width: 100%;
+                    height: auto;
+                }
             }
         }
     }
@@ -86,13 +123,32 @@
             margin-top: 192px;
             text-align: center;
             align-items: start;
+
+            @include m {
+                position: relative;
+                margin-top: 96px;
+                text-align: left;
+                z-index: 10;
+            }
         }
+
+        // .inner {
+        //     &>* {
+        //         @include m {
+        //             width: 100vw;
+        //         }
+        //     }
+        // }
 
         .area-top {
             display: grid;
             grid-template-columns: repeat(12, minmax(0, 1fr));
             align-items: center;
             padding: 0 1rem;
+
+            @include m {
+                grid-template-columns: repeat(4, minmax(0, 1fr));
+            }
 
             .img-content {
                 grid-row: span 1;
@@ -117,9 +173,18 @@
             grid-template-columns: repeat(12, minmax(0, 1fr));
             padding: 0 1rem;
 
+            @include m {
+                grid-template-columns: repeat(4, minmax(0, 1fr));
+            }
+
             .empty {
                 grid-row: span 1;
                 grid-column: span 3;
+
+                @include m {
+                    grid-column: span 4;
+                    grid-row: span 1;
+                }
             }
 
             .img-content {
@@ -130,9 +195,18 @@
                 z-index: 2;
                 margin-bottom: 400px;
 
+                @include m {
+                    margin-bottom: 48px;
+                }
+
                 img {
                     width: 1300px;
                     height: 975px;
+
+                    @include m {
+                        width: 100%;
+                        height: auto;
+                    }
                 }
             }
 
@@ -141,6 +215,10 @@
                 grid-column: span 12;
                 font-size: 144px;
                 z-index: 2;
+
+                @include m {
+                    font-size: 58px;
+                }
             }
         }
 
@@ -149,6 +227,10 @@
             grid-template-columns: repeat(12, minmax(0, 1fr));
             padding: 0 1rem;
             align-items: center;
+
+            @include m {
+                grid-template-columns: repeat(4, minmax(0, 1fr));
+            }
 
             .empty {
                 grid-row: span 1;
@@ -159,11 +241,20 @@
                 grid-row: span 1;
                 grid-column: span 5;
                 font-size: 144px;
+
+                @include m {
+                    font-size: 58px;
+                }
             }
 
             .img-content {
                 grid-row: span 1;
                 grid-column: span 5;
+
+                @include m {
+                    order: -1;
+                    padding: 50px 0;
+                }
             }
         }
     }
@@ -181,6 +272,10 @@
             justify-content: center;
             max-width: 100vw;
             overflow: hidden;
+
+            @include m {
+                min-height: auto;
+            }
         }
 
         &::after {
@@ -196,10 +291,18 @@
         position: relative;
         z-index: 1;
 
+        @include m {
+            padding: 40px 0 0;
+        }
+
         .group-txt {
             display: grid;
             grid-template-columns: repeat(12, minmax(0, 1fr));
             padding: 0 1rem;
+
+            @include m {
+                grid-template-columns: repeat(4, minmax(0, 1fr));
+            }
 
             .txt-area {
                 grid-row: span 1;
@@ -210,6 +313,10 @@
                 position: relative;
                 margin-left: 100px;
                 font-size: 64px;
+
+                @include m {
+                    font-size: 36px;
+                }
             }
 
             .link-more {
@@ -233,6 +340,11 @@
             padding: 0 1rem;
             margin-left: auto;
             margin-right: 0;
+
+            @include m {
+                margin-top: 0;
+                grid-template-columns: repeat(4, minmax(0, 1fr));
+            }
         }
 
         .text-area {
@@ -247,6 +359,10 @@
 
         .headline {
             font-size: 64px;
+
+            @include m {
+                font-size: 36px;
+            }
         }
 
         .swiper {
@@ -257,6 +373,11 @@
             grid-row: span 1;
             grid-column: span 8;
             padding-top: 80px;
+
+            @include m {
+                padding-top: 40px;
+                margin-top: 32px;
+            }
 
             .navigation-buttons {
                 position: absolute;
@@ -386,6 +507,10 @@
         position: relative;
         height: 600vh;
 
+        @include m {
+            height: 100vh;
+        }
+
         .inner {
             position: sticky;
             top: 0;
@@ -393,6 +518,11 @@
             grid-template-columns: repeat(12, minmax(0, 1fr));
             padding: 192px 1rem;
             height: 100vh;
+
+            @include m {
+                grid-template-columns: repeat(4, minmax(0, 1fr));
+                padding: 0 1rem;
+            }
         }
 
         .title-area {
@@ -402,6 +532,10 @@
             .headline {
                 font-size: 144px;
                 line-height: 0.9;
+
+                @include m {
+                    font-size: 58px;
+                }
             }
         }
 
@@ -410,9 +544,20 @@
             grid-row: span 1;
             margin-top: 16px;
 
+            @include m {
+                grid-column: 1 / 5;
+                position: relative;
+                z-index: 10;
+            }
+
             &>* {
                 opacity: 0;
                 visibility: hidden;
+
+                @include m {
+                    opacity: 1;
+                    visibility: visible;
+                }
             }
 
             .Top-text {
@@ -452,6 +597,13 @@
             grid-column: 6 / 13;
             grid-row: 1 / 2;
 
+            @include m {
+                position: relative;
+                grid-column: span 4;
+                grid-row: span 1;
+                width: 100%;
+            }
+
             .img-wrap {
                 position: relative;
                 margin: 0 0 1em;
@@ -466,6 +618,14 @@
                     visibility: hidden;
                     transform: scale(1.2);
                     transition: .4s;
+
+                    &:last-child {
+                        @include m {
+                            position: relative;
+                            visibility: visible;
+                            opacity: 1;
+                        }
+                    }
 
                     &.on {
                         position: relative;
@@ -483,6 +643,10 @@
                 gap: 8px;
                 display: flex;
                 align-items: center;
+
+                @include m {
+                    display: none;
+                }
 
                 button {
                     transform: translateX(0);
@@ -523,13 +687,27 @@
         padding: 0 1rem;
         overflow: hidden;
 
+        @include m {
+            grid-template-columns: repeat(4, minmax(0, 1fr));
+            padding: 192px 1rem 0;
+        }
+
         .title-wrap {
             grid-row: span 1;
             grid-column: span 10;
+
+            @include m {
+                grid-column: span 4;
+                grid-row: span 1;
+            }
         }
 
         .headline {
             font-size: 96px;
+
+            @include m {
+                font-size: 48px;
+            }
         }
 
         .txt-area {
@@ -557,6 +735,12 @@
             grid-column: span 7;
             margin-left: auto;
 
+            @include m {
+                grid-column: span 4;
+                grid-row: span 1;
+                margin-top: 50px;
+            }
+
             img {
                 width: 100%;
             }
@@ -570,6 +754,10 @@
             font-size: 96px;
             margin-left: 100px;
             margin-bottom: 40px;
+
+            @include m {
+                font-size: 48px;
+            }
         }
 
         .swiper {
@@ -656,6 +844,10 @@
     transition: bottom .3s cubic-bezier(.17, .04, .03, .94);
     background-color: #202020;
     border-top: 1px solid #fff;
+
+    @include pc-md {
+        display: none;
+    }
 
     &.on {
         display: none;
