--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -201,7 +201,7 @@
 
                 img {
                     width: 1300px;
-                    height: 975px;
+                    // height: 975px;
 
                     @include m {
                         width: 100%;
